--- a/main.html
+++ b/main.html
@@ -4,10 +4,74 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>HTML Assignment 3</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>HTML Assignment #3</h1>
+	<table class="middle" id="table-1">
+		<tr>
+			<td id="t11">left</td>
+			<td id="t12" class="center-col">center</td>
+			<td class="right" id="t13">right</td>
+		</tr>
+		<tr class="center">
+			<td>left</td>
+			<td class="center-col">center</td>
+			<td class="right">right</td>
+		</tr>
+		<tr>
+			<td>left</td>
+			<td class="center-col">center</td>
+			<td class="right">right</td>
+		</tr>
+	</table>
+
+	<table class="middle" id="table-2">
+		<tr>
+			<td id="21" colspan="6"></td>
+		</tr>
+		<tr>
+			<td rowspan="4"></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td colspan="3" rowspan="2"></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td colspan="6"></td>
+		</tr>
+	</table>
+
+	<table class="middle" id="table-3">
+		<tr class="green"><td colspan="3"></td></tr>
+		<tr>
+			<td></td>
+			<td id="t-image">
+				<img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg" alt="img">
+			</td>
+			<td></td>
+		</tr>
+		<tr class="blue"><td colspan="3"></td></tr>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
