--- a/main.html
+++ b/main.html
@@ -10,27 +10,27 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>HTML Assignment #3</h1>
-	<table class="middle" id="table-1">
+	<table class="middle" id="table-1" border="1" cellspacing="1" cellpadding="1">
 		<tr>
 			<td id="t11">left</td>
-			<td id="t12" class="center-col">center</td>
+			<td id="t12" class="center">center</td>
 			<td class="right" id="t13">right</td>
 		</tr>
 		<tr class="center">
 			<td>left</td>
-			<td class="center-col">center</td>
+			<td class="center">center</td>
 			<td class="right">right</td>
 		</tr>
 		<tr>
 			<td>left</td>
-			<td class="center-col">center</td>
+			<td class="center">center</td>
 			<td class="right">right</td>
 		</tr>
 	</table>
 
-	<table class="middle" id="table-2">
+	<table class="middle" id="table-2" border="1" cellspacing="1" cellpadding="1">
 		<tr>
-			<td id="21" colspan="6"></td>
+			<td id="t21" colspan="6"></td>
 		</tr>
 		<tr>
 			<td rowspan="4"></td>
@@ -61,7 +61,7 @@
 		</tr>
 	</table>
 
-	<table class="middle" id="table-3">
+	<table class="middle" id="table-3" border="1" cellspacing="1" cellpadding="1">
 		<tr class="green"><td colspan="3"></td></tr>
 		<tr>
 			<td></td>
